# tauri-stt-test

./: .gitignore  Makefile  README.md  run-app  벤치마크-리포트.md  회의-01-제품팀-주간스프린트.md
app/: package.json  pnpm-lock.yaml
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  Info.dev.plist  Info.plist  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json  macos.json  mobile.json
app/src-tauri/crates/asr-core/: Cargo.toml
app/src-tauri/crates/asr-core/src/: diar.rs  eval.rs  lib.rs  metrics.rs  vad.rs
app/src-tauri/crates/asr-core/src/asr/: backend.rs  endpoint_stream.rs  mod.rs  self_stream.rs  token.rs  wordtime.rs
app/src-tauri/crates/asr-core/src/output/: snapshot.rs
app/src-tauri/crates/asr-core/src/pipeline/: driver.rs  mod.rs
app/src-tauri/crates/asr-mlx/: Cargo.toml
app/src-tauri/crates/asr-mlx/src/: lib.rs
app/src-tauri/crates/asr-mlx/tests/: api_check.rs  encode_bench.rs
app/src-tauri/crates/asr-qwen/: Cargo.toml
app/src-tauri/crates/asr-qwen/src/: lib.rs
app/src-tauri/crates/asr-qwen/tests/: qwen_ko.rs
app/src-tauri/crates/asr-sense/: Cargo.toml
app/src-tauri/crates/asr-sense/src/: lib.rs
app/src-tauri/crates/asr-sense/tests/: sense_jfk.rs
app/src-tauri/crates/asr-whisper/: Cargo.toml
app/src-tauri/crates/asr-whisper/src/: lib.rs
app/src-tauri/crates/asr-whisper/tests/: meeting_bench.rs  q5_decode_probe.rs  whisper_rs_jfk.rs
app/src-tauri/crates/diar-campplus/: Cargo.toml
app/src-tauri/crates/diar-campplus/src/: lib.rs
app/src-tauri/crates/diar-campplus/tests/: e2e_diarized.rs  speaker_discriminate.rs
app/src-tauri/crates/diar-pyannote/: Cargo.toml
app/src-tauri/crates/diar-pyannote/src/: lib.rs
app/src-tauri/crates/diar-pyannote/tests/: cluster_count.rs  diar_scaling.rs
app/src-tauri/crates/stt-asr-qwen/: Cargo.toml  build.rs
app/src-tauri/crates/stt-asr-qwen/src/: lib.rs
app/src-tauri/crates/stt-asr-qwen/tests/: qwen_ko.rs
app/src-tauri/crates/stt-asr-sense/: Cargo.toml
app/src-tauri/crates/stt-asr-sense/src/: lib.rs
app/src-tauri/crates/stt-asr-sense/tests/: sense_jfk.rs
app/src-tauri/crates/stt-asr-sidecar/: Cargo.toml
app/src-tauri/crates/stt-asr-sidecar/src/: lib.rs
app/src-tauri/crates/stt-asr-sidecar/tests/: jfk_transcribe.rs
app/src-tauri/crates/stt-asr-whisper/: Cargo.toml
app/src-tauri/crates/stt-asr-whisper/src/: lib.rs
app/src-tauri/crates/stt-asr-whisper/tests/: meeting_bench.rs  whisper_rs_jfk.rs  whisper_streaming.rs
app/src-tauri/crates/stt-core/: Cargo.toml
app/src-tauri/crates/stt-core/src/: diar.rs  lib.rs  metrics.rs  vad.rs
app/src-tauri/crates/stt-core/src/asr/: backend.rs  mod.rs  policy.rs  self_stream.rs  token.rs
app/src-tauri/crates/stt-core/src/output/: mod.rs  snapshot.rs
app/src-tauri/crates/stt-core/src/pipeline/: driver.rs
app/src-tauri/crates/stt-diar/: Cargo.toml
app/src-tauri/crates/stt-diar/src/: lib.rs
app/src-tauri/crates/stt-diar/tests/: e2e_diarized.rs  speaker_discriminate.rs
app/src-tauri/crates/stt-sidecar-proto/: Cargo.toml
app/src-tauri/crates/stt-sidecar-proto/src/: lib.rs
app/src-tauri/crates/vad-energy/: Cargo.toml
app/src-tauri/crates/vad-energy/src/: lib.rs
app/src-tauri/scripts/: generate-coreml-encoder.sh
app/src-tauri/sidecar/: README.md  requirements.lock.txt  requirements.txt
app/src-tauri/sidecar/stt_mlx/: __init__.py  diarizer.py  framing.py  main.py  mlx_backend.py  online_asr.py  streaming_backends.py  timed.py
app/src-tauri/src/: app_state.rs  commands.rs  events.rs  export.rs  lib.rs  models.rs  session.rs
app/src-tauri/src/capture/: file_src.rs  mic_cpal.rs  mixer.rs  mod.rs  resample.rs  screencapturekit.rs
app/src-tauri/tests/: diar_eval.rs  latency_bench.rs  model_sweep.rs  q5_bench.rs  qwen_bench.rs
docs/: 00-product-seed.md  01-whisper-live-kit-analysis.md  02-architecture.md  03-progress.md  04-wlk-salvage-pointers.md
