# 워크스페이스 루트는 src-tauri 에 둔다 (cargo-mobile 이 src-tauri 에서 cargo 를 호출하므로
# manifest 루트를 흔들지 않는 배치가 마찰이 가장 적다 — docs/02-architecture.md A.1).
[workspace]
members = [".", "crates/*"]
resolver = "2"

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"   # 사이드카(externalBin) 실행 — P1에서 스코프 부여
tauri-plugin-store = "2"   # config·화자 갤러리 경량 저장
tauri-plugin-dialog = "2"  # 전사 내보내기 저장 대화상자
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"              # 마이크 캡처(데스크톱). iOS 캡처는 P3에서 AVAudioEngine
rubato = "0.15"            # 16kHz mono 리샘플(anti-alias polyphase/FFT)
tokio = { version = "1", features = ["sync", "rt", "time"] }  # 세션 채널·자원모니터 주기
sysinfo = "0.33"           # 앱+사이드카 CPU/RSS 측정(자원 모니터)
stt-core = { path = "crates/stt-core" }
stt-asr-whisper = { path = "crates/stt-asr-whisper" }

