# 워크스페이스 루트는 src-tauri 에 둔다 (cargo-mobile 이 src-tauri 에서 cargo 를 호출하므로
# manifest 루트를 흔들지 않는 배치가 마찰이 가장 적다 — docs/02-architecture.md A.1).
[workspace]
members = [".", "crates/*"]
resolver = "2"

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"   # 사이드카(externalBin) 실행 — P1에서 스코프 부여
tauri-plugin-store = "2"   # config·화자 갤러리 경량 저장
tauri-plugin-dialog = "2"  # 전사 내보내기 저장 대화상자
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"              # 마이크 캡처(데스크톱). iOS 캡처는 P3에서 AVAudioEngine
rubato = "0.15"            # 16kHz mono 리샘플(anti-alias polyphase/FFT)
hound = "3"                # 파일 입력(데모/테스트)용 WAV 읽기
tokio = { version = "1", features = ["sync", "rt", "time"] }  # 세션 채널·자원모니터 주기
sysinfo = "0.33"           # 앱+사이드카 CPU/RSS 측정(자원 모니터)
asr-core = { path = "crates/asr-core" }
asr-whisper = { path = "crates/asr-whisper" }
asr-sense = { path = "crates/asr-sense" }
asr-qwen = { path = "crates/asr-qwen" }
vad-energy = { path = "crates/vad-energy" }
diar-campplus = { path = "crates/diar-campplus" }

# 모델 전수 벤치(tests/model_sweep.rs)용 — 통합테스트는 dev-deps 만 접근 가능.
[dev-dependencies]
asr-core = { path = "crates/asr-core" }
asr-whisper = { path = "crates/asr-whisper" }
asr-sense = { path = "crates/asr-sense" }
asr-qwen = { path = "crates/asr-qwen" }
diar-campplus = { path = "crates/diar-campplus" }
hound = "3"
tokio = { version = "1", features = ["full"] }

# 시스템 오디오 캡처(C7) — macOS ScreenCaptureKit + 권한 체크
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "8", features = ["macos_13_0"] }
tauri-plugin-macos-permissions = "2"

