[package]
name = "asr-core"
version = "0.1.0"
edition = "2021"
description = "플랫폼·tauri 무의존 순수 Rust 코어 (ASR trait · LocalAgreement 드라이버 · 출력 스냅샷)"

# tauri 를 절대 의존하지 않는다 (docs/02-architecture.md A.2).
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "io-util"] }
