[package]
name = "asr-mlx"
version = "0.1.0"
edition = "2021"
description = "ASR: Whisper on MLX (mlx-rs, Apple Silicon). Lightning-SimulWhisper 식 MLX 디코더 — Rust 네이티브, Python 0. macOS 전용."

[dependencies]
asr-core = { path = "../asr-core" }
mlx-rs = { version = "0.25", features = ["metal"] }
tokenizers = "0.20"
serde_json = "1"

[dev-dependencies]
hound = "3"
