[package]
name = "stt-asr-whisper"
version = "0.1.0"
edition = "2021"
description = "Rust 네이티브 Whisper ASR (whisper.cpp via whisper-rs, Metal 온디바이스) — Python 사이드카 대체"

[dependencies]
stt-core = { path = "../stt-core" }
whisper-rs = { version = "0.14", features = ["metal"] }

[dev-dependencies]
hound = "3"
